raffia/tests/error/scss/forward-at-rule/with-before-as.snap
---
source: raffia/tests/error.rs
---
error: expect token `;`, but `<ident>` received
  ┌─ with-before-as.scss:1:31
  │
1 │ @forward "other" with ($a: b) as c-*;
  │                               ^^


